versioned_docs/version-2.5/reference-guides/cli-with-rancher/rancher-cli.adoc
= Rancher CLI
:description: Interact with Rancher using command line interface (CLI) tools from your workstation.

The Rancher CLI (Command Line Interface) is a unified tool that you can use to interact with Rancher. With this tool, you can operate Rancher using a command line rather than the GUI.

=== Download Rancher CLI

The binary can be downloaded directly from the UI. The link can be found in the right hand side of the footer in the UI. We have binaries for Windows, Mac, and Linux. You can also check the https://github.com/rancher/cli/releases[releases page for our CLI] for direct downloads of the binary.

=== Requirements

After you download the Rancher CLI, you need to make a few configurations. Rancher CLI requires:

* Your Rancher Server URL, which is used to connect to Rancher Server.
* An API Bearer Token, which is used to authenticate with Rancher. For more information about obtaining a Bearer Token, see xref:../../reference-guides/user-settings/api-keys.adoc[Creating an API Key].

=== CLI Authentication

Before you can use Rancher CLI to control your Rancher Server, you must authenticate using an API Bearer Token. Log in using the following command (replace `<BEARER_TOKEN>` and `<SERVER_URL>` with your information):

[,bash]
----
$ ./rancher login https://<SERVER_URL> --token <BEARER_TOKEN>
----

If Rancher Server uses a self-signed certificate, Rancher CLI prompts you to continue with the connection.

=== Project Selection

Before you can perform any commands, you must select a Rancher project to perform those commands against. To select a xref:../../how-to-guides/advanced-user-guides/manage-clusters/projects-and-namespaces.adoc[project] to work on, use the command `./rancher context switch`. When you enter this command, a list of available projects displays. Enter a number to choose your project.

*Example: `./rancher context switch` Output*

----
User:rancher-cli-directory user$ ./rancher context switch
NUMBER    CLUSTER NAME   PROJECT ID              PROJECT NAME
1         cluster-2      c-7q96s:p-h4tmb         project-2
2         cluster-2      c-7q96s:project-j6z6d   Default
3         cluster-1      c-lchzv:p-xbpdt         project-1
4         cluster-1      c-lchzv:project-s2mch   Default
Select a Project:
----

After you enter a number, the console displays a message that you've changed projects.

----
INFO[0005] Setting new context to project project-1
INFO[0005] Saving config to /Users/markbishop/.ranchcli2.json
----

Ensure you can run `rancher kubectl get pods` successfully.

=== Commands

The following commands are available for use in Rancher CLI.

|===
| Command | Result

| `apps, [app]`
| Performs operations on catalog applications (i.e., individual https://docs.helm.sh/developing_charts/[Helm charts]) or Rancher charts.

| `catalog`
| Performs operations on xref:../../how-to-guides/new-user-guides/helm-charts-in-rancher.adoc[catalogs].

| `clusters, [cluster]`
| Performs operations on your xref:../../how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/kubernetes-clusters-in-rancher-setup.adoc[clusters].

| `context`
| Switches between Rancher xref:../../how-to-guides/advanced-user-guides/manage-clusters/projects-and-namespaces.adoc[projects]. For an example, see <<project-selection,Project Selection>>.

| `inspect [OPTIONS] [RESOURCEID RESOURCENAME]`
| Displays details about https://kubernetes.io/docs/reference/kubectl/cheatsheet/#resource-types[Kubernetes resources] or Rancher resources (i.e.: xref:../../how-to-guides/advanced-user-guides/manage-clusters/projects-and-namespaces.adoc[projects] and xref:../../how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/workloads-and-pods.adoc[workloads]. Specify resources by name or ID.

| `kubectl`
| Runs https://kubernetes.io/docs/reference/kubectl/overview/#operations[kubectl commands].

| `login, [l]`
| Logs into a Rancher Server. For an example, see <<cli-authentication,CLI Authentication>>.

| `namespaces, [namespace]`
| Performs operations on namespaces.

| `nodes, [node]`
| Performs operations on nodes.

| `projects, [project]`
| Performs operations on xref:../../how-to-guides/advanced-user-guides/manage-clusters/projects-and-namespaces.adoc[projects].

| `ps`
| Displays xref:../../how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/workloads-and-pods.adoc[workloads] in a project.

| `settings, [setting]`
| Shows the current settings for your Rancher Server.

| `ssh`
| Connects to one of your cluster nodes using the SSH protocol.

| `help, [h]`
| Shows a list of commands or help for one command.
|===

=== Rancher CLI Help

Once logged into Rancher Server using the CLI, enter `./rancher --help` for a list of commands.

All commands accept the `--help` flag, which documents each command's usage.

=== Limitations

The Rancher CLI *cannot* be used to install xref:../../how-to-guides/new-user-guides/helm-charts-in-rancher.adoc[dashboard apps or Rancher feature charts].
